[package]
name = "blueshift-gfx"
version = "0.1.0"
authors = ["ttappr <tmtappr@gmail.com>"]
edition = "2018"
description = "A Rust WebGL game engine."
license-file = "LICENSE_MIT"
readme = "README.md"
#repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
#futures = "0.3"
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.23"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.23"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.50"
features = ['Blob',
            'console', 'Document', 'Element', 
            'Headers', 'Request', 'RequestInit',
            'RequestMode', 'Response',
            'HtmlCanvasElement', 'WebGlBuffer',
            'WebGlRenderingContext', 
            'WebGlProgram', 'WebGlShader', 
            'Window']
